<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/rounded_rectangle"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="40dp"
    android:paddingRight="40dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/dialog_save_game_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:typeface="normal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/dialog_save_game_description"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:typeface="normal" />

    <EditText
        android:id="@+id/dialog_save_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:hint="@string/dialog_save_game_name_placeholder"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/dialog_save_errorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_save_game_error_empty_name"
        android:textColor="@color/red"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_save_button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/cancel"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/dialog_save_button_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/save"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>