<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_launcher"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_500"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.presto.p2048.activities.LauncherActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="40dp"
        android:layout_weight="4"
        android:src="@drawable/logo_2048" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_weight="6"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/newButt"
            style="@style/launcherButton"
            android:text="@string/new_game" />

        <Button
            android:id="@+id/savedButton"
            style="@style/launcherButton"
            android:text="@string/saved_game" />

        <Button
            android:id="@+id/howToButton"
            style="@style/launcherButton"
            android:text="@string/how_to_play" />
    </LinearLayout>
</LinearLayout>
