<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/rounded_rectangle"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/dialog_game_over"
        android:textAlignment="center"
        android:textSize="46sp"
        android:typeface="normal" />

    <TextView
        android:id="@+id/scoreText"
        style="@style/gameOverDialogText"
        android:text="@string/dialog_score" />

    <TextView
        android:id="@+id/highScoreText"
        style="@style/gameOverDialogText"
        android:text="@string/dialog_high_score" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/leaderBoardButt"
            style="@style/gameOverDialogImage"
            android:src="@drawable/leaderboard" />

        <ImageView
            android:id="@+id/feedbackButt"
            style="@style/gameOverDialogImage"
            android:src="@drawable/feedback" />

        <ImageView
            android:id="@+id/shareButt"
            style="@style/gameOverDialogImage"
            android:src="@drawable/share_icon" />

        <ImageView
            android:id="@+id/newGameButt"
            style="@style/gameOverDialogImage"
            android:src="@drawable/ic_action_refresh" />
    </LinearLayout>
</LinearLayout>